--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             async function updateQuote() {
                 try {
-                    const response = await fetch("https://api.quotable.io/random");
+                    const response = await fetch("https://github.com/marip6sa/marip6sa.github.io/blob/main/index.html");
                     const data = await response.json();
 
                     if (response.ok) {
