--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 if (fileUrl == null) {
                     updateQuote();
                 } else {
-                    updateQuoteCustom(https://gist.githubusercontent.com/marip6sa/e93aec80e4a7b8e2cd94077c6b3f05f0/raw/ce41df11d196c5c7db051cedf0b8d9a85ce916b6/gistfile1.json);
+                    updateQuoteCustom(fileURL);
                 }
             }
 
