--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             async function updateQuote() {
                 try {
-                    const response = await fetch("https://github.com/marip6sa/marip6sa.github.io/blob/main/index.html");
+                    const response = await fetch("https://gist.githubusercontent.com/marip6sa/e93aec80e4a7b8e2cd94077c6b3f05f0/raw/ce41df11d196c5c7db051cedf0b8d9a85ce916b6/gistfile1.json");
                     const data = await response.json();
 
                     if (response.ok) {
