--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             async function updateQuote() {
                 try {
-                    const response = await fetch("https://api.quotable.io/random");
+                    const response = await fetch("https://gist.githubusercontent.com/marip6sa/544072ffeb7e2d6e45dcf1eeb5bc5c08/raw/3b96403fd265f0cc7da11b1cb7dba98a168118ce/eqvl.json");
                     const data = await response.json();
 
                     if (response.ok) {
