--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 if (fileUrl == null) {
                     updateQuote();
                 } else {
-                    updateQuoteCustom(fileURL);
+                    updateQuoteCustom(fileUrl);
                 }
             }
 
